Update wasm file

--- a/source/WasmMaterialX/binding.html
+++ b/source/WasmMaterialX/binding.html
@@ -14,5 +14,5 @@
   <script src="WasmMaterialXCore/WasmUtil.js"></script>
 
   <!-- output from em++ -->
-  <script src="WasmMaterialXCore/MaterialXCore.js"></script>
+  <script src="./MaterialXCore.js"></script>
 </html>
