Add more bindings for Element
- Added some helper functions to catch pointer exceptions

--- a/source/WasmMaterialX/binding.html
+++ b/source/WasmMaterialX/binding.html
@@ -16,6 +16,7 @@
 </script>
 
 <!-- WasmUtil javascript wrapper -->
+<script src="WasmMaterialXCore/jsUtils.js"></script>
 <script src="WasmMaterialXCore/WasmUtil.js"></script>
 <script src="WasmMaterialXCore/WasmElement.js"></script>
 
