Rename the jsUtils to helpers
This file contains helper/utils functions

--- a/source/JsMaterialX/binding.html
+++ b/source/JsMaterialX/binding.html
@@ -16,7 +16,7 @@
 </script>
 
 <!-- WasmUtil javascript wrapper -->
-<script src="JsMaterialXCore/jsUtils.js"></script>
+<script src="JsMaterialXCore/helpers.js"></script>
 <script src="JsMaterialXCore/JsUtil.js"></script>
 <script src="JsMaterialXCore/JsElement.js"></script>
 
