--- a/source/JsMaterialX/binding.html
+++ b/source/JsMaterialX/binding.html
@@ -5,20 +5,26 @@
   var Module = {
     onRuntimeInitialized: function () {
       // Generate MaterialX api
+      JsTypes.generateWrappers(Module, MaterialX);
       JsUtil.generateWrappers(Module, MaterialX);
       JsElement.generateWrappers(Module, MaterialX);
+      JsInterface.generateWrappers(Module, MaterialX);
 
       // Run "tests"
+      JsTypes.test(MaterialX);
       JsUtil.test(MaterialX);
       JsElement.test(MaterialX);
+      JsInterface.test(MaterialX);
     }
   };
 </script>
 
 <!-- WasmUtil javascript wrapper -->
 <script src="JsMaterialXCore/helpers.js"></script>
+<script src="JsMaterialXCore/JsTypes.js"></script>
 <script src="JsMaterialXCore/JsUtil.js"></script>
 <script src="JsMaterialXCore/JsElement.js"></script>
+<script src="JsMaterialXCore/JsInterface.js"></script>
 
 <!-- output from em++ -->
 <script src="./MaterialXCore.js"></script>
