--- a/source/JsMaterialX/binding.html
+++ b/source/JsMaterialX/binding.html
@@ -10,6 +10,7 @@
       JsElement.generateWrappers(Module, MaterialX);
       JsInterface.generateWrappers(Module, MaterialX);
       JsNode.generateWrappers(Module, MaterialX);
+      JsDocument.generateWrappers(Module, MaterialX);
 
       // Run "tests"
       JsTypes.test();
@@ -17,6 +18,7 @@
       JsElement.test();
       JsInterface.test();
       JsNode.test();
+      JsDocument.test();
     }
   };
 </script>
@@ -28,6 +30,7 @@
 <script src="JsMaterialXCore/JsElement.js"></script>
 <script src="JsMaterialXCore/JsInterface.js"></script>
 <script src="JsMaterialXCore/JsNode.js"></script>
+<script src="JsMaterialXCore/JsDocument.js"></script>
 
 <!-- output from em++ -->
 <script src="./MaterialXCore.js"></script>
