Add shell script to generate the wasm/javascript bindings

--- a/source/JsMaterialX/JsMaterialXCore/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/index.html
@@ -24,13 +24,13 @@
 </script>
 
 <!-- WasmUtil javascript wrapper -->
-<script src="JsMaterialXCore/helpers.js"></script>
-<script src="JsMaterialXCore/JsTypes.js"></script>
-<script src="JsMaterialXCore/JsUtil.js"></script>
-<script src="JsMaterialXCore/JsElement.js"></script>
-<script src="JsMaterialXCore/JsInterface.js"></script>
-<script src="JsMaterialXCore/JsNode.js"></script>
-<script src="JsMaterialXCore/JsDocument.js"></script>
+<script src="helpers.js"></script>
+<script src="JsTypes.js"></script>
+<script src="JsUtil.js"></script>
+<script src="JsElement.js"></script>
+<script src="JsInterface.js"></script>
+<script src="JsNode.js"></script>
+<script src="JsDocument.js"></script>
 
 <!-- output from em++ -->
 <script src="./MaterialXCore.js"></script>
