--- a/source/JsMaterialX/JsMaterialXCore/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/index.html
@@ -5,7 +5,7 @@
   var Module = {
     onRuntimeInitialized: function () {
 
-      var bindings = [JsTypes, JsUtil, JsElement, JsInterface, JsNode, JsDefinition, JsDocument, JsLook, JsProperty]
+      var bindings = [JsTypes, JsUtil, JsElement, JsInterface, JsNode, JsDefinition, JsDocument, JsLook, JsProperty, JsGeom]
       // Generate wrappers
       bindings.forEach(function (binding) {
         binding.generateWrappers(Module, MaterialX)
@@ -31,6 +31,7 @@
 <script src="JsDefinition.js"></script>
 <script src="JsLook.js"></script>
 <script src="JsProperty.js"></script>
+<script src="JsGeom.js"></script>
 
 <!-- output from em++ -->
 <script src="./MaterialXCore.js"></script>
