Add bindings for Material
- register vectors in JsRegisteredVectors.cpp

--- a/source/JsMaterialX/JsMaterialXCore/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/index.html
@@ -16,7 +16,8 @@
         JsProperty,
         JsGeom,
         JsVariant,
-        JsValue
+        JsValue,
+        JsMaterial
       ];
       // Generate wrappers
       bindings.forEach(function (binding) {
@@ -45,6 +46,7 @@
 <script src="JsGeom.js"></script>
 <script src="JsVariant.js"></script>
 <script src="JsValue.js"></script>
+<script src="JsMaterial.js"></script>
 
 <!-- output from em++ -->
 <script src="./MaterialXCore.js"></script>
