Finish Document bindings

--- a/source/JsMaterialX/JsMaterialXCore/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/index.html
@@ -24,10 +24,12 @@
         binding.generateWrappers(Module, MaterialX)
       });
 
-      // Run "tests"
-      bindings.forEach(function (binding) {
-        binding.test()
-      });
+      JsDocument.test();
+
+      // // Run "tests"
+      // bindings.forEach(function (binding) {
+      //   binding.test()
+      // });
     }
   };
 </script>
