--- a/source/JsMaterialX/JsMaterialXCore/test/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/test/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- output from em++ -->
-<script src="./../MaterialXCore.js"></script>
+<script src="../../MaterialXCore.js"></script>
 <script src="./helpers.js"></script>
 <script src="./JsDefinition.js"></script>
 <script src="./JsDocument.js"></script>
