Add test for XmlIo

--- a/source/JsMaterialX/JsMaterialXCore/test/index.html
+++ b/source/JsMaterialX/JsMaterialXCore/test/index.html
@@ -16,7 +16,7 @@
 
 <!-- output from em++ -->
 <script src="../../MaterialXCore.js"></script>
-<script src="./helpers.js"></script>
+<script src="../../helpers.js"></script>
 <script src="./JsDefinition.js"></script>
 <script src="./JsDocument.js"></script>
 <script src="./JsElement.js"></script>
