Optimize the wasm file
Ignore the wasm output.

--- a/source/JsMaterialX/JsMaterialXFormat/test/codeExamples.html
+++ b/source/JsMaterialX/JsMaterialXFormat/test/codeExamples.html
@@ -95,6 +95,6 @@
 
 
 <!-- output from em++ -->
-<script src="../../MaterialXCore.js"></script>
+<script src="../../MaterialX.js"></script>
 
 </html>
