--- a/source/JsMaterialX/JsMaterialXFormat/test/index.html
+++ b/source/JsMaterialX/JsMaterialXFormat/test/index.html
@@ -15,7 +15,7 @@
 
 
 <!-- output from em++ -->
-<script src="../../MaterialXCore.js"></script>
+<script src="../../MaterialX.js"></script>
 <script src="../../helpers.js"></script>
 <script src="./JsXmlIo.js"></script>
 
