--- a/source/JsMaterialX/JsMaterialXFormat/test/codeExamples.html
+++ b/source/JsMaterialX/JsMaterialXFormat/test/codeExamples.html
@@ -2,15 +2,16 @@
 <html>
 
 <script type="module">
-    import { default as _module } from '../../MaterialXLib.js'
+    import { default as _module } from '../../_build/source/JsMaterialX/MaterialXLib.js'
     var buildMaterialXDocument;
     var travereDocumentTree;
 
     var moduleObj = {
         locateFile: function (path) {
-            return document.location.origin + '/' + path;
+            return document.location.origin + '/_build/source/JsMaterialX/' + path;
         }
     };
+
     _module(moduleObj).then(function (m) {
 
         console.log("Ready");
